added code to properly log stack traces as one message.  That is the header only appears with the first line of the stack trace.
svn path=/trunk/; revision=32864


Former-commit-id: 3882e9f0395f6bd8f2bfac11e13fc730452e69b6